2012-04-02  1.3
    * Add spawnEggOverride option to allow spawning _any_ entity using spawn eggs
      using spawn eggs, including dragons or non-living entities (dangerous, default off)
    * Add dumpEntityMap option to show entity ID mapping for debugging purposes
    * Add mob and entity IDs from AnimalBikes 1.11.0 in config.yml
    * Tested on 1.2.4-R1.0 and 1.2.3-R0.3

2012-03-21  1.2
    * Respect WorldGuard protection
    * Add spawnersUnstackable config option (default false) 
    * Add mob and entity IDs from Rancraft Penguins 1.1c in config.yml

2012-03-11  1.1a
    * Add ocelot and iron golem
    * Tested on 1.2.3-R0.2, 1.1-R8, and 1.1-R4

2012-03-03  1.1
    * Update for new API
    * Craftable spawners supported on: CraftBukkit 1.2.3-R0.1, 1.1-R7, 1.1-R4
     (not on 1.1-R6, due to BUKKIT-602)

2012-02-26  1.0.1
    * Fix NPE when using /ss to view type of non-standard spawners
    * Tested with CraftBukkit 1.1-R5 (1961 development build)
    
2012-02-26  1.0
    * Change default destroyDropEgg to false in config.yml
    * Change command to /silkspawners, add /spawner and /ss aliases
    * Preserve comments in config.yml
    * Remove workaround for BUKKIT-602 since its fixed in 1.1-R4
    * Remove workaround for Material.MONSTER_EGG since its fixed in 1.1-R4 ModLoaderMP 1.1r3
    * Remove dependence on CreatureType 
    * Add /ss all to list all creature types
    * Add /ss [creature]egg to get a free spawn egg item, as opposed to a spawner box
    * Add silkspawners.freeitemegg permission
    * Add minSilkTouchLevel config option, to control Silk Touch enchantment requirement
    * Add support for custom mobs
    * Add mob and entity IDs from Natural Selection mod
    * Compile for CraftBukkit 1.1-R4

2012-02-08  0.5
    * Add clicking spawner with spawn egg to change type (by default, ops only)
    * Add option to consume spawn egg when clicking spawner to change type
    * Add silkspawners.changetypewithegg permission node