@@ -1,3 +1,8 @@
+
+    * Improve spawnEggOverride to spawn on clicked block instead of above player
+    * Change craftableSpawners recipes to shaped (egg surrounded by iron bars)
+    * Add per-creature crafting recipe config options (enableCraftingSpawner)
+
 2012-04-02  1.3
     * Add spawnEggOverride option to allow spawning _any_ entity using spawn eggs
       using spawn eggs, including dragons or non-living entities (dangerous, default off)
